--- a/tinysnake.css
+++ b/tinysnake.css
@@ -10,3 +10,18 @@ div {
   line-height: 15px;
   margin: 0 auto;
 }
+
+a {
+  font-size: 0.8rem;
+  position: fixed;
+  right: -67px;
+  top: 40px;
+  width: 15rem;
+  padding: 0.25rem;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+  background-color: #ffd007;
+  transform: rotate(45deg);
+}
